[package]
name = "sliding-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
bracket-lib = "0.8.1"
ndarray-rand = "0.14.0"
slab_tree = "0.3.2"
priority-queue = "1.2.3"
chronometer = "0.1.2"